--- a/theme/test.html
+++ b/theme/test.html
@@ -16,13 +16,64 @@
     <style>
         .ul{ padding-top: 10px;}
         .li{ display: block; line-height: 40px; text-align: center; font-size: 14px; background: #fff; border-top: 1px solid #eee; border-bottom: 1px solid #eee; margin-bottom: 10px;}
-        .test{ height: 300px; background: #ddd;}
+        .test{ padding: 0 30px;}
+        .tx{ margin-bottom: 10px; line-height: 30px;}
+        .info{ position: fixed; right: 0; top: 40%; background: rgba(0,0,0,.6); color: #fff; padding: 5px 10px;}
     </style>
 </head>
 <body>
-    <div class="test" id="J_test"></div>
+    <div class="test" id="J_test">
+        <p class="tx">001在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">002在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">003在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">004在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">005在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">006在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">007在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">008在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">009在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">010在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">011在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">012在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">013在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">014在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">015在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">016在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+        <p class="tx">017在移动web项目的开发中，遇到一个通过点击页面自动到相应的楼层处的需求，最初的想法就是使用html的target属性进行切换，但实际效果十分死板，显得毫无交互性。该前端架构采用zepto这个轻库进行开发，它具有类似jQuery的语法，之后采用了animate</p>
+    </div>
+    <div class="info" id="J_info">
+        <p>窗口高度：<span id="J_w"></span></p>
+        <p>内容高度：<span id="J_bh"></span></p>
+        <p>总屏数：<span id="J_allp"></span></p>
+        <p>当前第几屏：<span id="J_cur">1</span></p>
+    </div>
     <script>
         $(function(){
+            var w = window.innerHeight,
+                bh = $('#J_test').height();
+
+            $('#J_w').html(w);
+            $('#J_bh').html(bh);
+            $('#J_allp').html(Math.round((bh)/w))
+
+            var heartjump = new CUES.heartjump();
+            heartjump.throttle = function(event){
+               getcur()
+            }
+            heartjump.debounce = function(event){
+                getcur()
+            }
+
+            $(window).scroll(function(e){
+                heartjump.step(event);
+            })
+
+            function getcur(){
+                var st = $(window).scrollTop();
+                if(st>w/2)
+                $('#J_cur').html(Math.ceil((st-w/2)/w)+1)
+            }
+
             
         })
     </script>
