--- a/theme/testa.html
+++ b/theme/testa.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <input class="ctrol" type="file" id="J_file" placeholder="选择图片" accept="image/*" />
-    <p class="info">图片信息：<span id="J_or"></span></p>
+    <p class="info">图片信息：<span id="J_or"></span>1</p>
     <p>图片压缩：<span id="J_ora"></span></p>
     <img src="" class="img" id="J_img">
     <script>
