--- a/shoptest/n/style.html
+++ b/shoptest/n/style.html
@@ -47,7 +47,7 @@
 		</div>
 
 		<div class="box">
-			<div class="box-ul a" style="transform: translate3d(0px, 40px, 0px); transition: transform 0.4s ease 0s;">
+			<div class="box-ul a" style="transform: translateY(40px); transition: transform 0.4s ease 0s;">
 				<div class="box-li">行内文字1</div>
 				<div class="box-li">行内文字2</div>
 				<div class="box-li">行内文字3</div>
@@ -63,7 +63,7 @@
 		</div>
 
 		<div class="box">
-			<div class="box-ul b" style="transform: translate3d(0px, -40px, 0px); transition: transform 0.4s ease 0s;">
+			<div class="box-ul b" style="transform: translateY(40px); transition: transform 0.4s ease 0s;">
 				<div class="box-li">行内文字1</div>
 				<div class="box-li">行内文字2</div>
 				<div class="box-li">行内文字3</div>
