--- a/shoptest/n/style.html
+++ b/shoptest/n/style.html
@@ -17,12 +17,12 @@
 	<!-- 页面样式 -->
 	<style rel="stylesheet" type="text/css">
 	.box *{ box-sizing: initial;user-select:none}
-	.box{ overflow: hidden; margin-bottom: 30px; background-color: #eee;}
+	.box{ overflow: hidden; margin-bottom: 30px; background-color: #eee; display: flex;}
 	.box-ul{ width: 30%; float: left; display: flex; flex-direction: column;}
 	.box-li{ line-height: 40px; display: flex;}
 	.box-li:nth-child(2n){ background-color: #ddd;}
 	.box-tx{ width: 30%; float: left; display: flex;flex-direction: column;}
-	.box-txli{ line-height: 40px; display: flex;}
+	.box-txli{ line-height: 40px; display: flex; height: 40px;}
 	.box-txli:nth-child(2n+1){ background-color: #ddd;}
 	.hei{ float: left; width: 20%; background-color: #ccc; height: 140px; padding-top: 20px;}
 	.box-ul.a .box-li{ height: 40px;}
