--- a/shoptest/n/style.html
+++ b/shoptest/n/style.html
@@ -27,11 +27,11 @@
 	.hei{ float: left; width: 20%; background-color: #ccc; height: 140px; padding-top: 20px;}
 	.box-ul.a .box-li{ height: 40px;}
 	.box-ul.b .box-li{ height: 40px;} */
-	.box{ overflow: hidden; margin-bottom: 30px; background-color: #eee;}
+	.box{ overflow: hidden; margin-bottom: 30px; background-color: #eee; display: flex;}
 	.box-ul{ width: 30%; float: left;}
 	.box-li{ line-height: 40px;}
 	.box-li:nth-child(2n){ background-color: #ddd;}
-	.box-tx{ width: 30%; float: left;}
+	.box-tx{ width: 30%; float: left; margin: 0 10px;}
 	.box-txli{ line-height: 40px; height: 40px;}
 	.box-txli:nth-child(2n+1){ background-color: #ddd;}
 	.hei{ float: left; width: 20%; background-color: #ccc; height: 160px; padding-top: 20px;}
